get rid of unneeded module